Started using gradle and using top.gg's api to set server count.